--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "version": 2,
   "routes": [
-    { "src": "^/api/(.*)",   "dest": "http://101.43.40.196/api/$1" },
-    { "src": "^/ollie/(.*)", "dest": "http://101.43.40.196/ollie/$1" },
-    { "src": "^/$",          "dest": "http://101.43.40.196/ollie/" }
+    { "src": "^/api/(.*)$", "dest": "http://101.43.40.196/api/$1" },
+    { "src": "^/(.*)$",     "dest": "http://101.43.40.196/$1" }
   ]
 }
