--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
+  "redirects": [
+    { "source": "/ollie",  "destination": "/" },
+    { "source": "/ollie/", "destination": "/" }
+  ],
   "routes": [
-    { "src": "^/ollie/assets/(.*)$", "dest": "http://101.43.40.196/assets/$1" },
-    { "src": "^/assets/(.*)$",       "dest": "http://101.43.40.196/assets/$1" },
-    { "src": "^/api/(.*)$",          "dest": "http://101.43.40.196/api/$1" },
-    { "src": "^/ollie/(.*)$",        "dest": "http://101.43.40.196/$1" },
-    { "src": "^/$",                  "dest": "http://101.43.40.196/" },
-    { "src": "^/(.*)$",              "dest": "http://101.43.40.196/$1" }
+    { "src": "^/assets/(.*)$", "dest": "http://101.43.40.196/assets/$1" },
+    { "src": "^/api/(.*)$",    "dest": "http://101.43.40.196/api/$1" },
+    { "src": "^/(.*)$",        "dest": "http://101.43.40.196/$1" }
   ]
 }
