--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,15 @@
   "version": 2,
   "redirects": [
     { "source": "/ollie",  "destination": "/" },
-    { "source": "/ollie/", "destination": "/" }
+    { "source": "/ollie/", "destination": "/" },
+    { "source": "/ollie/(.*)", "destination": "/$1" }
   ],
   "routes": [
     { "src": "^/assets/(.*)$", "dest": "http://101.43.40.196/assets/$1" },
     { "src": "^/api/(.*)$",    "dest": "http://101.43.40.196/api/$1" },
     { "src": "^/(.*)$",        "dest": "http://101.43.40.196/$1" }
+  ],
+  "headers": [
+    { "source": "/(.*)", "headers": [{ "key": "Cache-Control", "value": "no-store" }] }
   ]
 }
